`Added new features and components for course management and student programs`

--- a/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
+++ b/src/app/user/coordinator/coordinator-instructors/coordinator-instructors.component.html
@@ -34,100 +34,112 @@
 
 
 
-
-  <div
-  class="flex flex-col col-span-1 gap-2 mt-8 sm:flex-row lg:flex-row md:flex-col"
->
-  <div class="w-40 rounded-lg h-14 bg-slate-600">
-    <h1 class="p-4 font-bold text-center text-white">CIVE : 40</h1>
-  </div>
-  <!-- <div class="w-full h-20 bg-blue-500 rounded-lg"></div>
-  <div class="w-full h-20 rounded-lg bg-slate-800"></div> -->
-</div>
-
-
 <div class="mt-6">
 
 <table id="search-table">
   <thead>
       <tr>
+        <th>
+          <span class="flex items-center">
+             #
+              <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+              </svg>
+          </span>
+      </th>
           <th>
               <span class="flex items-center">
-                  Name
+                 First Name
                   <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
                   </svg>
               </span>
           </th>
-          <th data-type="date" data-format="YYYY/DD/MM">
-              <span class="flex items-center">
-                  Release Date
-                  <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
-                  </svg>
-              </span>
-          </th>
+
           <th>
-              <span class="flex items-center">
-                  NPM Downloads
-                  <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
-                  </svg>
-              </span>
-          </th>
-          <th>
-              <span class="flex items-center">
-                  Growth
-                  <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
-                  </svg>
-              </span>
-          </th>
+            <span class="flex items-center">
+               Middle Name
+                <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+                </svg>
+            </span>
+        </th>
+
+        <th>
+          <span class="flex items-center">
+             Last Name
+              <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                  <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+              </svg>
+          </span>
+      </th>
+
+      <th>
+        <span class="flex items-center">
+          Email
+            <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+            </svg>
+        </span>
+    </th>
+
+    <th>
+      <span class="flex items-center">
+         Phone Number
+          <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+          </svg>
+      </span>
+  </th>
+
+  <th>
+    <span class="flex items-center">
+      Actions
+        <svg class="w-4 h-4 ms-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 15 4 4 4-4m0-6-4-4-4 4"/>
+        </svg>
+    </span>
+</th>
+
       </tr>
   </thead>
   <tbody class="bg-white">
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">Flowbite</td>
-          <td>2021/25/09</td>
-          <td>269000</td>
-          <td>49%</td>
-      </tr>
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">React</td>
-          <td>2013/24/05</td>
-          <td>4500000</td>
-          <td>24%</td>
-      </tr>
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">Angular</td>
-          <td>2010/20/09</td>
-          <td>2800000</td>
-          <td>17%</td>
-      </tr>
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">Vue</td>
-          <td>2014/12/02</td>
-          <td>3600000</td>
-          <td>30%</td>
-      </tr>
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">Svelte</td>
-          <td>2016/26/11</td>
-          <td>1200000</td>
-          <td>57%</td>
-      </tr>
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">Ember</td>
-          <td>2011/08/12</td>
-          <td>500000</td>
-          <td>44%</td>
-      </tr>
-      <tr>
-          <td class="font-medium text-gray-900 whitespace-nowrap dark:text-white">Backbone</td>
-          <td>2010/13/10</td>
-          <td>300000</td>
-          <td>9%</td>
-      </tr>
+
+    <tr *ngFor="let item of instructors">
+         <td class="font-bold">{{item.id}}</td>
+         <td class="font-bold">{{item.first_name}}</td>
+         <td class="font-bold">{{item.middle_name}}</td>
+         <td class="font-bold">{{item.last_name}}</td>
+         <td class="font-bold">{{item.email}}</td>
+         <td class="font-bold">{{item.phone_number}}</td>
+         <td>
+          <div class="grid grid-cols-3 gap-1">
+            <a href="http://">
+              <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
+                <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
+              </svg>
+            </a>
+
+            <svg class="w-6 h-6 text-green-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+              <path fill-rule="evenodd" d="M5 8a4 4 0 1 1 7.796 1.263l-2.533 2.534A4 4 0 0 1 5 8Zm4.06 5H7a4 4 0 0 0-4 4v1a2 2 0 0 0 2 2h2.172a2.999 2.999 0 0 1-.114-1.588l.674-3.372a3 3 0 0 1 .82-1.533L9.06 13Zm9.032-5a2.907 2.907 0 0 0-2.056.852L9.967 14.92a1 1 0 0 0-.273.51l-.675 3.373a1 1 0 0 0 1.177 1.177l3.372-.675a1 1 0 0 0 .511-.273l6.07-6.07a2.91 2.91 0 0 0-.944-4.742A2.907 2.907 0 0 0 18.092 8Z" clip-rule="evenodd"/>
+            </svg>
+
+            <svg class="w-6 h-6 text-red-600 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+              <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd"/>
+            </svg>
+
+
+          </div>
+
+
+
+         </td>
+
+
+
+    </tr>
+
 
   </tbody>
 </table>
