--- a/src/app/user/coordinator/coordinator-assign-course/coordinator-assign-course.component.html
+++ b/src/app/user/coordinator/coordinator-assign-course/coordinator-assign-course.component.html
@@ -29,7 +29,7 @@
   </nav>
 
   <!-- Assign Course Form -->
-  <form (submit)="AssignCourse()" #AssignForm="ngForm" class="grid grid-cols-1 gap-6 md:grid-cols-2">
+  <form (submit)="AssignCourse()" #AssignForm="ngForm" >
   <div class="p-3 rounded-lg shadow-md bg-gray-50 dark:bg-gray-900">
 
 
@@ -45,7 +45,7 @@
           [trackByFn]="trackById"
           placeholder="Select a Course"
           [searchable]="true"
-          name="course_name"
+          name="course_id"
           id="course_name"
           class="w-full px-3 py-2 text-gray-900 bg-white border border-gray-300 rounded-lg"
         ></ng-select>
@@ -62,7 +62,7 @@
           [trackByFn]="trackById"
           placeholder="Select an Instructor"
           [searchable]="true"
-          name="instructor_name"
+          name="instructor_id"
           id="instructor_name"
           class="w-full px-3 py-2 text-gray-900 bg-white border border-gray-300 rounded-lg"
         ></ng-select>
@@ -79,14 +79,14 @@
           [trackByFn]="trackById"
           placeholder="Select a Student"
           [searchable]="true"
-          name="student_name"
+          name="student_id"
           id="student_name"
           class="w-full px-3 py-2 text-gray-900 bg-white border border-gray-300 rounded-lg"
         ></ng-select>
 
       </div>
 
-  </form>
+
 
    <div class="mt-3">
       <button
@@ -97,7 +97,7 @@
       Assign Course
     </button>
   </div>
-
+</form>
 
 
   <div class="mt-6">
