--- a/src/app/user/coordinator/coordinator-students/coordinator-students.component.html
+++ b/src/app/user/coordinator/coordinator-students/coordinator-students.component.html
@@ -29,10 +29,18 @@
       </li>
 
     </ol>
-    <div>
+
+
+    <div class="grid grid-cols-2 gap-2">
+      <button (click)="openUploadModal()"  class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm9-10v.4A3.6 3.6 0 0 1 8.4 9H6.61A3.6 3.6 0 0 0 3 12.605M14.458 3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
+      </svg>Upload Student<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
+      </svg></button>
+
       <button (click)="openModal()"  class="inline-flex items-center px-3 py-2 text-sm font-normal text-center text-gray-600 bg-gray-200 rounded-lg hover:bg-gray-300 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:text-gray-300 dark:focus:ring-gray-700"><svg class="w-3 h-3 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 16 20">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm9-10v.4A3.6 3.6 0 0 1 8.4 9H6.61A3.6 3.6 0 0 0 3 12.605M14.458 3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
-    </svg>New Student Program<svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
+    </svg>New Student <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/>
     </svg></button>
 
@@ -206,6 +214,44 @@
 
       </div>
  </div>
+
+
+
+
+ <div *ngIf="isUploadOpen" class="fixed inset-0 flex items-center justify-center bg-gray-200 bg-opacity-50 rounded-lg">
+  <div class="p-2 mt-20 bg-white rounded-lg shadow-lg " style="width: 500px;">
+
+    <div class="grid justify-between grid-flow-col">
+      <h3 class="mt-2 font-semibold text-md">Upload Students Programme</h3>
+      <div class="flex justify-end ">
+        <button (click)="closeUploadModal()" class="px-4 py-2 text-white bg-red-500 rounded hover:bg-red-600">
+          Close
+        </button>
+      </div>
+    </div>
+
+
+     <div class="p-3 ">
+
+      <div
+  class="upload-drop-zone"
+  (drop)="onFileDrop($event)"
+  (dragover)="onDragOver($event)"
+  (dragleave)="onDragLeave($event)"
+  [class.dragging]="isDragging"
+>
+  <p *ngIf="!selectedFile">Drag & Drop Excel file here or <span (click)="fileInput.click()" class="click-here">click to select</span></p>
+  <p *ngIf="selectedFile">Selected file: {{ selectedFile.name }}</p>
+  <input type="file" #fileInput (change)="onFileSelected($event)" accept=".xlsx, .xls" hidden />
+</div>
+
+
+
+     </div>
+
+  </div>
+</div>
+
 
  </div>
 
