--- a/src/app/user/coordinator/coordinator-header/coordinator-header.component.html
+++ b/src/app/user/coordinator/coordinator-header/coordinator-header.component.html
@@ -46,7 +46,7 @@
               <span class="sr-only">Open user menu</span>
               <img
                 class="w-8 h-8 rounded-full"
-                src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
+                src="images/profile.gif"
                 alt="user photo"
               />
             </button>
@@ -57,7 +57,7 @@
           >
             <div class="px-4 py-3" role="none">
               <p class="text-sm text-gray-900 dark:text-white" role="none">
-                Neil Sims
+               {{userData?.first_name}}
               </p>
               <p
                 class="text-sm font-medium text-gray-900 truncate dark:text-gray-300"
@@ -68,7 +68,7 @@
 
               <li>
                 <a
-                  href="#"
+                  (click)="logout()"
                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                   role="menuitem"
                   >Sign out</a
