--- a/src/app/user/timetable-master/timetable-master-layout/timetable-master-layout.component.html
+++ b/src/app/user/timetable-master/timetable-master-layout/timetable-master-layout.component.html
@@ -2,10 +2,10 @@
   <app-t-master-header></app-t-master-header>
   <app-t-master-sidebar></app-t-master-sidebar>
 
-  <div class="p-4 sm:ml-64">
+  <div class="p-4 bg-gray-200 sm:ml-64">
     <router-outlet></router-outlet>
     <!-- Child components will be displayed here -->
   </div>
-  <app-t-master-footer></app-t-master-footer>
-  <!-- Footer will also be displayed in the LayoutComponent -->
+  <!-- <app-t-master-footer></app-t-master-footer> -->
+
 </div>
