--- a/src/app/user/timetable-master/t-master-dashboard/t-master-dashboard.component.html
+++ b/src/app/user/timetable-master/t-master-dashboard/t-master-dashboard.component.html
@@ -1,9 +1,77 @@
-<div class="h-full w-full m">
-  <div
-    class="flex flex-col sm:flex-row lg:flex-row md:flex-col mt-14 col-span-1"
-  >
-    <div class="h-40 w-full bg-slate-950"></div>
-    <div class="h-40 w-full bg-blue-500"></div>
-    <div class="h-40 w-full bg-slate-800"></div>
+<div class="w-full h-full mt-24 bg-gray-200">
+
+
+
+  <!-- Breadcrumb -->
+  <nav class="justify-between px-4 py-3 mt-16 text-gray-700 border border-gray-200 rounded-lg sm:flex sm:px-5 bg-gray-50 dark:bg-gray-800 dark:border-gray-700" aria-label="Breadcrumb">
+    <ol class="inline-flex items-center mb-3 space-x-1 md:space-x-2 rtl:space-x-reverse sm:mb-0">
+      <li>
+        <div class="flex items-center">
+          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Home</a>
+        </div>
+      </li>
+      <li aria-current="page">
+        <div class="flex items-center">
+          <svg class="w-3 h-3 mx-1 text-gray-400 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
+          </svg>
+          <a href="#" class="text-sm font-medium text-gray-700 ms-1 hover:text-blue-600 md:ms-2 dark:text-gray-400 dark:hover:text-white">Dashboard</a>
+        </div>
+      </li>
+
+    </ol>
+    <div>
+
+
+    </div>
+  </nav>
+
+
+
+
+    <div
+      class="flex flex-col col-span-1 gap-7 sm:flex-row lg:flex-row md:flex-col mt-14"
+    >
+      <div class="w-full h-40 rounded-lg bg-slate-800 flex flex-cols-2 gap-1 justify-between">
+       <div class="flex flex-col gap-1 p-10">
+        <p class="text-white font-bold "> Total Student Programs</p>
+        <p class="text-2xl text-white">{{students.length}}</p>
+
+       </div>
+
+       <div>
+          <img src="images/student.gif" alt="" class="rounded-l-3xl mt-7" style="width: 100px; height: 100px;">
+       </div>
+
+      </div>
+      <div class="w-full h-40 rounded-lg bg-blue-600 flex flex-cols-2 gap-1 justify-between">
+        <div class="flex flex-col gap-1 p-10">
+         <p class="text-white font-bold "> Total Instructors</p>
+         <p class="text-2xl text-white">{{instructors.length}}</p>
+
+        </div>
+
+        <div>
+           <img src="images/press-conference.gif" alt="" class="rounded-l-3xl mt-7" style="width: 100px; height: 100px;">
+        </div>
+
+       </div>
+       <div class="w-full h-40 rounded-lg bg-slate-800 flex flex-cols-2 gap-1 justify-between">
+        <div class="flex flex-col gap-1 p-10">
+         <p class="text-white font-bold "> Total Courses</p>
+         <p class="text-2xl text-white">{{course_list.length}}</p>
+
+        </div>
+
+        <div>
+           <img src="images/book.gif" alt="" class="rounded-l-3xl mt-7" style="width: 100px; height: 100px;">
+        </div>
+
+       </div>
+    </div>
+
+    <div class="w-full h-80 bg-gray-200 mt-10 border border-gray-300 shadow-lg rounded-lg">
+      <h1 class="font-bold text-2xl p-2">Recent Activities</h1>
+
+    </div>
   </div>
-</div>
