--- a/src/app/user/timetable-master/t-master-header/t-master-header.component.html
+++ b/src/app/user/timetable-master/t-master-header/t-master-header.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="fixed top-0 z-50 w-full bg-white border-b border-gray-200 dark:bg-gray-800 dark:border-gray-700"
+  class="fixed top-0 z-50 w-full h-20 bg-white shadow-lg"
 >
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
@@ -27,9 +27,9 @@
           </svg>
         </button>
         <a href="https://flowbite.com" class="flex ms-2 md:me-24">
-          <img src="images/logo.png" class="h-8 me-3" alt="FlowBite Logo" />
+          <img src="images/logo.png" class="h-8 pt-3 me-3" alt="FlowBite Logo" />
           <span
-            class="self-center text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
+            class="self-center pt-3 text-xl font-semibold sm:text-2xl whitespace-nowrap dark:text-white"
             >TimeTable</span
           >
         </a>
@@ -46,7 +46,7 @@
               <span class="sr-only">Open user menu</span>
               <img
                 class="w-8 h-8 rounded-full"
-                src="https://flowbite.com/docs/images/people/profile-picture-5.jpg"
+                src="images/profile.gif"
                 alt="user photo"
               />
             </button>
@@ -57,7 +57,7 @@
           >
             <div class="px-4 py-3" role="none">
               <p class="text-sm text-gray-900 dark:text-white" role="none">
-                Neil Sims
+               {{userData?.first_name}}
               </p>
               <p
                 class="text-sm font-medium text-gray-900 truncate dark:text-gray-300"
@@ -65,33 +65,10 @@
               ></p>
             </div>
             <ul class="py-1" role="none">
+
               <li>
                 <a
-                  href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                  role="menuitem"
-                  >Dashboard</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                  role="menuitem"
-                  >Settings</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
-                  role="menuitem"
-                  >Earnings</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#"
+                  (click)="logout()"
                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
                   role="menuitem"
                   >Sign out</a
