--- a/src/app/user/timetable-master/t-master-dashboard/t-master-dashboard.component.html
+++ b/src/app/user/timetable-master/t-master-dashboard/t-master-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full mt-24 bg-gray-200">
+<div class="w-full h-full mt-28 bg-gray-200">
 
 
 
@@ -58,20 +58,45 @@
        </div>
        <div class="w-full h-40 rounded-lg bg-slate-800 flex flex-cols-2 gap-1 justify-between">
         <div class="flex flex-col gap-1 p-10">
-         <p class="text-white font-bold "> Total Courses</p>
-         <p class="text-2xl text-white">{{course_list.length}}</p>
+         <p class="text-white font-bold "> Total Venues</p>
+         <p class="text-2xl text-white">{{venue_list.length}}</p>
 
         </div>
 
         <div>
-           <img src="images/book.gif" alt="" class="rounded-l-3xl mt-7" style="width: 100px; height: 100px;">
+           <img src="images/sofa.gif" alt="" class="rounded-l-3xl mt-7" style="width: 100px; height: 100px;">
         </div>
 
        </div>
     </div>
 
-    <div class="w-full h-80 bg-gray-200 mt-10 border border-gray-300 shadow-lg rounded-lg">
-      <h1 class="font-bold text-2xl p-2">Recent Activities</h1>
+    <div class="w-full h-full bg-gray-200 mt-10 border border-gray-300 shadow-lg rounded-lg">
+      <h1 class="font-bold text-xl text-gray-400 p-6">Recent Activities</h1>
+
+
+      <div class="m-6 w-full h-full">
+
+
+        <ol class="relative border-s border-slate-800 dark:border-gray-700">
+          <li *ngFor="let activity of activities" class="mb-10 ms-4">
+            <div class="absolute w-3 h-3 bg-blue-800 rounded-full mt-1.5 -start-1.5 border border-white"></div>
+            <time class="mb-1 text-sm font-normal leading-none text-gray-400">{{ activity.time | date:'medium' }}</time>
+
+            <div *ngIf=" activity.path =='/user/timetable-master/dashboard'">
+              <h3 class="text-lg font-semibold text-gray-900" >Visited: Dashboard </h3>
+            </div>
+
+            <div *ngIf=" activity.path =='/user/timetable-master/teaching'">
+              <h3 class="text-lg font-semibold text-gray-900" >Visited: Teaching Timetable </h3>
+            </div>
+
+          </li>
+        </ol>
+
+
+
+      </div>
+
 
     </div>
   </div>
